<resources>
    <string name="app_name">SignUpConstrained</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Name">Enter Name</string>
    <string name="Hello">Hello</string>
    <string name="SignIn">Sign into your account</string>
    <string name="SignuP">SignUp into your account</string>
    <string name="Email">Email ID</string>
    <string name="Password">Password</string>
    <string name="OrLogin">Or login using social media</string>
    <string name="OrSignUp">Or SignUp using social media</string>
    <string name="todo">TODO</string>
</resources>
