<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#f5f6fa">

    <ImageView
        android:layout_width="212dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/pizza2"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="377dp"
        android:layout_height="497dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Hello"
            android:textColor="#2f3640"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/SignIn"
            android:textColor="#2f3640"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="150dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="#2f3640"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="220dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="#2f3640"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:background="@drawable/button_shape2"
            android:elevation="15dp"
            android:fontFamily="serif"
            android:text="@string/Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="380dp"
            android:fontFamily="serif"
            android:text="@string/OrLogin"
            android:textColor="#2f3640"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="420dp"
            android:elevation="5dp"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="420dp"
            android:elevation="5dp"
            android:src="@drawable/twit" />


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>